WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223050
[ macOS debug arm64 ] fast/dom/Range/compareBoundaryPoints-compareHow-exception.html is a constant text failure
https://bugs.webkit.org/show_bug.cgi?id=223050
Summary
[ macOS debug arm64 ] fast/dom/Range/compareBoundaryPoints-compareHow-excepti...
Robert Jenner
Reported
2021-03-10 15:05:18 PST
fast/dom/Range/compareBoundaryPoints-compareHow-exception.html is a constant text failure in macOS debug on Apple Silicon only. HISTORY URL:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fdom%2FRange%2FcompareBoundaryPoints-compareHow-exception.html
DIFF TEXT: --- /Volumes/Data/worker/bigsur-debug-applesilicon-tests-wk2/build/layout-test-results/fast/dom/Range/compareBoundaryPoints-compareHow-exception-expected.txt +++ /Volumes/Data/worker/bigsur-debug-applesilicon-tests-wk2/build/layout-test-results/fast/dom/Range/compareBoundaryPoints-compareHow-exception-actual.txt @@ -8,7 +8,7 @@ PASS range.compareBoundaryPoints(Range.END_TO_END, sourceRange) is -1 PASS range.compareBoundaryPoints(Range.END_TO_START, sourceRange) is -1 PASS range.compareBoundaryPoints(65536, sourceRange) is -1 -PASS range.compareBoundaryPoints(-1, sourceRange) threw exception NotSupportedError: The operation is not supported.. +FAIL range.compareBoundaryPoints(-1, sourceRange) should throw a NotSupportedError. Did not throw. PASS range.compareBoundaryPoints(4, sourceRange) threw exception NotSupportedError: The operation is not supported.. PASS range.compareBoundaryPoints(100, sourceRange) threw exception NotSupportedError: The operation is not supported.. PASS range.compareBoundaryPoints(65535, sourceRange) threw exception NotSupportedError: The operation is not supported..
Attachments
Patch
(1.76 KB, patch)
2021-03-10 20:07 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Jenner
Comment 1
2021-03-10 15:05:38 PST
I cannot reproduce the failure because I do not have access to an Apple Silicon Mac.
Radar WebKit Bug Importer
Comment 2
2021-03-10 15:06:02 PST
<
rdar://problem/75284949
>
Chris Dumez
Comment 3
2021-03-10 15:20:52 PST
We are passing -1 as 'how' parameter (of type unsigned short). I would expect this to wrap around and become a very large number. Valid values for 'how' are in the range [0, 3]. We would throw if getting anything outside the range. I am unclear how we went from -1 to [0, 3] for now.
Chris Dumez
Comment 4
2021-03-10 20:07:18 PST
Created
attachment 422896
[details]
Patch
Chris Dumez
Comment 5
2021-03-10 20:13:52 PST
Credits to Alexey who helped identify the undefined behavior and Tim who helped with debugging on Apple Silicon.
EWS
Comment 6
2021-03-11 01:10:37 PST
Committed
r274271
: <
https://commits.webkit.org/r274271
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422896
[details]
.
Alexey Proskuryakov
Comment 7
2021-03-11 09:53:31 PST
***
Bug 223054
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 8
2021-03-11 09:56:04 PST
***
Bug 223053
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug