[ macOS debug arm64 ]fast/dom/Range/compareBoundaryPoints-compareHow-exception.html is a constant text failure https://bugs.webkit.org/show_bug.cgi?id=223050 <rdar://problem/75284949>

Reviewed by Ryosuke Niwa.

Casting a negative double to an unsigned integer type is undefined behavior.
We need to make sure the double value is positive before casting.

No new tests, covered by existing test.

* bindings/js/JSDOMConvertNumbers.cpp:
(WebCore::toSmallerUInt):


Canonical link: https://commits.webkit.org/235168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274271 268f45cc-cd09-0410-ab3c-d52691b4dbfc